# dbrs

./: .env  .gitignore  Cargo.toml  Dioxus.toml  README.md  other_test.db  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: CI.yaml
assets/: main.css
migrations/: 20251126030157_init.sql
src/: App.css  App.tsx  app-state.ts  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConnectionList.tsx
