[package]
name = "dbrs"
description = "Database Studio"
version = "0.1.0"
license = "MIT"
edition = "2024"
authors = ["Andrew Hessler <adhessler@gmail.com>"]

[dependencies]
dioxus = { version = "0.7.0-rc.3", features = [] }
rusqlite = "0.37.0"
smol = "2.0.2"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
